--- a/Javascript/task6.html
+++ b/Javascript/task6.html
@@ -10,7 +10,7 @@
 <div class="container">
   <h1>Random Array</h1>
   
-  <button onclick="generateArray()">Generate and Pick</button>
+  <button onclick="generateArray()">Make Array</button>
 
   <p id="arrayDisplay"></p>
   <p id="result"></p>
