--- a/Javascript/task7.html
+++ b/Javascript/task7.html
@@ -2,58 +2,71 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-   
   <title>Add Two Numbers - Live</title>
   <style>
-   body {
-  font-family: sans-serif;
-  text-align: center;
-  margin-top: 50px;
-  background-color: #f2f2f2;
-}
+    body {
+      font-family: sans-serif;
+      text-align: center;
+      margin-top: 50px;
+      background-color: #f2f2f2;
+    }
 
-.container {
-  background-color: white;
-  padding: 2em;
-  border-radius: 8px;
-  box-shadow: 0 4px 8px rgba(0,0,0,0.1);
-  text-align: center;
-  display: inline-block;
-}
+    .container {
+      background-color: white;
+      padding: 2em;
+      border-radius: 20px;
+      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+      width: 350px;
+      margin: auto;
+    }
 
-h2 {
-  color: #333;
-}
+    h2 {
+      color: #333;
+      margin-bottom: 20px;
+    }
 
-label {
-  font-size: 1.2em;
-  color: #555;
-  display: block;
-  margin-top: 10px;
-}
+    label {
+      font-size: 1.1em;
+      color: #555;
+      display: block;
+      margin-top: 10px;
+      margin-bottom: 5px;
+      text-align: left;
+    }
 
-input {
-  padding: 10px;
-  margin: 10px;
-  font-size: 16px;
-  width: 150px;
-  text-align: center;
-}
+    input {
+      padding: 10px;
+      margin-bottom: 15px;
+      font-size: 16px;
+      width: 100%;
+      box-sizing: border-box;
+      border-radius: 6px;
+      border: 1px solid #ccc;
+      text-align: center;
+    }
 
+    input:read-only {
+      background-color: #f8f8f8;
+      color: #333;
+    }
   </style>
 </head>
 <body>
-<div class="container">
-  <h2>Add Two Numbers</h2>
-  <input type="number" id="num1" placeholder="First Number">
-  <br>
-  <input type="number" id="num2" placeholder="Second Number">
-  <br>
-  <input type="text" id="result" placeholder="Result" >
 
-</div>
- <script src="task7.js"></script>
+  <div class="container">
+    <h2>Add Two Numbers</h2>
 
+    <label for="num1">Enter First Number:</label>
+    <input type="number" id="num1" placeholder="First Number">
+
+    <label for="num2">Enter Second Number:</label>
+    <input type="number" id="num2" placeholder="Second Number">
+
+    <label for="result">Result:</label>
+    <input type="text" id="result" placeholder="Result" readonly>
+  </div>
+
+  <script src="task7.js"></script>
 
 </body>
 </html>
