--- a/Javascript/task7.html
+++ b/Javascript/task7.html
@@ -67,6 +67,28 @@
   </div>
 
   <script src="task7.js"></script>
+<!-- <script>
+  const num1= document.getElementById("num1");
+  const num2=document.getElementById("num2");
+  const result=document.getElementById("result");
 
+  num1.addEventListener("input", function(){
+    result.value="NaN";
+  }
+  );
+
+  num2.addEventListener("input", function(){
+    const val1=parseInt(num1.value);
+    const val2=parseInt(num2.value);
+
+    if(!isNaN(val1) && !isNaN(val2)){
+      result.value=val1 + val2;
+
+    }
+    else{
+      result.value="NaN";
+    }
+  })
+</script> -->
 </body>
 </html>
