--- a/Javascript/task9.html
+++ b/Javascript/task9.html
@@ -1,26 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
+  <meta charset="UTF-8" />
   <title>Bubble Animation</title>
-  <link rel="stylesheet" href="task9.css">
+  <link rel="stylesheet" href="task9.css" />
 </head>
 <body>
-
-  <div class="bubble-container">
-    <!-- You can add more bubbles by copying this -->
-    <div class="bubble"></div>
-    <div class="bubble"></div>
-    <div class="bubble"></div>
-    <div class="bubble"></div>
-    <div class="bubble"></div>
-    <div class="bubble"></div>
-    <div class="bubble"></div>
-    <div class="bubble"></div>
-    <div class="bubble"></div>
-    <div class="bubble"></div>
-     
-  </div>
-
+  <div id="bubble-container"></div>
+  <script src="task9.js"></script>
 </body>
 </html>
